--- a/views/trail.pug
+++ b/views/trail.pug
@@ -5,7 +5,7 @@ block content
   div.grid-container
     div.trail-banner
       div.trail-img
-        img(src=`/images/trail${trail.id}.jpg`).trail-image
+        img(src=`/images/trail/${trail.id}.jpg`).trail-image
       div.trail-toggles
         button.visited Visited
         button.interested Interested
